fixed alignment

--- a/app.css
+++ b/app.css
@@ -78,7 +78,7 @@ div#weekDay{
     color: rgba(0,0,0,0.87);
     font-size: 14px;
     box-sizing: inherit;
-    margin: 25% auto 1em auto;
+    margin: 8% auto 1em auto;
     border: 1px solid #e0e0e0;
     border-radius: 2px;
     overflow: hidden;
